Adjusted hyper-params

--- a/test_LLM_fine_tuning.ipynb
+++ b/test_LLM_fine_tuning.ipynb
@@ -116,8 +116,8 @@
      "text": [
       "/home/ankus/miniconda3/envs/test_vLLM/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Generating train split: 52 examples [00:00, 21600.85 examples/s]\n",
-      "Map: 100%|██████████| 52/52 [00:00<00:00, 2690.51 examples/s]"
+      "Generating train split: 52 examples [00:00, 22536.04 examples/s]\n",
+      "Map: 100%|██████████| 52/52 [00:00<00:00, 2659.02 examples/s]"
      ]
     },
     {
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 1,126,400 || all params: 1,101,174,784 || trainable%: 0.1023\n"
+      "trainable params: 12,615,680 || all params: 1,112,664,064 || trainable%: 1.1338\n"
      ]
     }
    ],
@@ -290,10 +290,13 @@
     "\n",
     "# LoRA 설정\n",
     "lora_config = LoraConfig(\n",
-    "    r=8,  # # r(Rank): LoRA 행렬의 크기. 값이 클수록 표현력은 좋아지지만 메모리 사용량 커짐. 보통 8 또는 16을 권장, 메모리가 극도로 부족하면 4까지 도전!!!\n",
+    "    # 100개 데이터라면 표현력을 높이기 위해 8보다 16을 추천 (메모리 허용 시)\n",
+    "    r=16,  # # r(Rank): LoRA 행렬의 크기. 값이 클수록 표현력은 좋아지지만 메모리 사용량 커짐. 보통 8 또는 16을 권장, 메모리가 극도로 부족하면 4까지 도전!!!\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"q_proj\", \"v_proj\"], # 학습할 레이어 지정\n",
-    "    lora_dropout=0.05,\n",
+    "    # [수정] q, v 뿐만 아니라 모든 리니어 레이어를 타겟으로 잡아 학습 효율 극대화.\n",
+    "    # 소형 모델일수록 더 많은 레이어를 학습하는 것이 한국어 습득에 유리.\n",
+    "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"], \n",
+    "    lora_dropout=0.1,    # 데이터가 적으므로 드롭아웃을 살짝 높여 과적합을 방지.\n",
     "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\"\n",
     ")\n",
@@ -323,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trainable params: 1,126,400 || all params: 1,101,174,784 || trainable%: 0.1023\n"
+      "trainable params: 12,615,680 || all params: 1,112,664,064 || trainable%: 1.1338\n"
      ]
     },
     {
@@ -340,7 +343,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='130' max='130' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [130/130 01:49, Epoch 10/10]\n",
+       "      [130/130 02:36, Epoch 10/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -351,56 +354,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.720300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>1.658800</td>\n",
+       "      <td>1.410000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>1.099600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>1.411500</td>\n",
+       "      <td>0.942600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>0.899500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>1.163000</td>\n",
+       "      <td>0.728400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>0.640500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>40</td>\n",
-       "      <td>0.997000</td>\n",
+       "      <td>0.544700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>45</td>\n",
+       "      <td>0.371800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>0.939000</td>\n",
+       "      <td>0.433700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>55</td>\n",
+       "      <td>0.254700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>60</td>\n",
-       "      <td>0.833800</td>\n",
+       "      <td>0.209600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>65</td>\n",
+       "      <td>0.232700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>70</td>\n",
-       "      <td>0.814300</td>\n",
+       "      <td>0.118900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
+       "      <td>0.115100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>80</td>\n",
-       "      <td>0.745300</td>\n",
+       "      <td>0.121500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>85</td>\n",
+       "      <td>0.082300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>90</td>\n",
-       "      <td>0.718800</td>\n",
+       "      <td>0.092700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>95</td>\n",
+       "      <td>0.070400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>0.650300</td>\n",
+       "      <td>0.067000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>105</td>\n",
+       "      <td>0.068100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>110</td>\n",
-       "      <td>0.632300</td>\n",
+       "      <td>0.061600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>115</td>\n",
+       "      <td>0.061100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>120</td>\n",
-       "      <td>0.622800</td>\n",
+       "      <td>0.053700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>125</td>\n",
+       "      <td>0.060400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>130</td>\n",
-       "      <td>0.622400</td>\n",
+       "      <td>0.058300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -415,11 +470,11 @@
     {
      "data": {
       "text/plain": [
-       "('./output/my_tokenizer/tokenizer_config.json',\n",
-       " './output/my_tokenizer/special_tokens_map.json',\n",
-       " './output/my_tokenizer/tokenizer.model',\n",
-       " './output/my_tokenizer/added_tokens.json',\n",
-       " './output/my_tokenizer/tokenizer.json')"
+       "('./output/my_llm/tokenizer_config.json',\n",
+       " './output/my_llm/special_tokens_map.json',\n",
+       " './output/my_llm/tokenizer.model',\n",
+       " './output/my_llm/added_tokens.json',\n",
+       " './output/my_llm/tokenizer.json')"
       ]
      },
      "execution_count": 5,
@@ -445,21 +500,24 @@
     "\n",
     "    # 3. 정밀도 및 하드웨어 가속\n",
     "    fp16=True,                      # 16비트 혼합 정밀도 학습 (속도 향상)\n",
-    "    optim=\"paged_adamw_32bit\",       # 메모리 효율적인 옵티마이저  paged_adamw_8bit, paged_adamw_32bit\n",
+    "    # [수정] 2080 Ti라면 8bit 옵티마이저가 메모리 관리에 더 유리\n",
+    "    optim=\"paged_adamw_8bit\",       # 메모리 효율적인 옵티마이저  paged_adamw_8bit, paged_adamw_32bit\n",
     "\n",
     "    # 4. 로그 및 저장 전략\n",
-    "    logging_steps=10,\n",
+    "    logging_steps=5,  # 데이터가 적으므로 더 자주 로그 확인\n",
     "    save_strategy=\"epoch\",\n",
+    "    save_total_limit=2,               # 디스크 용량 관리를 위해 최신 체크포인트만 유지\n",
     "\n",
     "    # 5. 성능 최적화\n",
-    "    max_grad_norm=0.3,                # 그래디언트 폭주 방지 (안정성)\n",
-    "    weight_decay=0.01,                # 과적합 방지를 위한 가중치 감쇠\n",
+    "    max_grad_norm=1.0,                # 0.3은 너무 엄격할 수 있어 1.0으로 완화하여 학습 속도 개선\n",
+    "    weight_decay=0.05,                # 데이터가 적을 때 과적합 방지를 위해 조금 더 강화\n",
+    "    group_by_length=True,             # 속도 향상을 위해 길이가 비슷한 데이터끼리 묶음\n",
     ")\n",
     "\n",
     "# 4-1. 그래디언트 체크포인팅 사용 시 필수 설정\n",
     "if getattr(training_args, \"gradient_checkpointing\", False):\n",
     "    model.gradient_checkpointing_enable()\n",
-    "    # 아래 설정이 누락되면 해당 에러가 발생할 수 있습니다\n",
+    "    # 아래 설정이 누락되면 해당 에러가 발생 가능\n",
     "    model.enable_input_require_grads()\n",
     "\n",
     "# 4-2. LoRA 파라미터가 제대로 잡혔는지 확인 (중요)\n",
@@ -477,7 +535,7 @@
     "\n",
     "# 6. 학습된 모델 저장\n",
     "model.save_pretrained(\"./output/my_llm\")\n",
-    "tokenizer.save_pretrained(\"./output/my_tokenizer\")"
+    "tokenizer.save_pretrained(\"./output/my_llm\") # 모델과 같은 경로에 저장 권장"
    ]
   },
   {
