--- a/test_LLM_deploy.ipynb
+++ b/test_LLM_deploy.ipynb
@@ -107,20 +107,20 @@
       "INFO 01-06 17:08:26 cuda.py:178] Cannot use FlashAttention-2 backend for Volta and Turing GPUs.\n",
       "INFO 01-06 17:08:26 cuda.py:226] Using XFormers backend.\n",
       "INFO 01-06 17:08:30 __init__.py:207] Automatically detected platform cuda.\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:30 multiproc_worker_utils.py:229] Worker ready; awaiting tasks\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:31 cuda.py:178] Cannot use FlashAttention-2 backend for Volta and Turing GPUs.\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:31 cuda.py:226] Using XFormers backend.\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:32 utils.py:916] Found nccl from library libnccl.so.2\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:32 pynccl.py:69] vLLM is using nccl==2.21.5\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:30 multiproc_worker_utils.py:229] Worker ready; awaiting tasks\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:31 cuda.py:178] Cannot use FlashAttention-2 backend for Volta and Turing GPUs.\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:31 cuda.py:226] Using XFormers backend.\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:32 utils.py:916] Found nccl from library libnccl.so.2\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:32 pynccl.py:69] vLLM is using nccl==2.21.5\n",
       "INFO 01-06 17:08:32 utils.py:916] Found nccl from library libnccl.so.2\n",
       "INFO 01-06 17:08:32 pynccl.py:69] vLLM is using nccl==2.21.5\n",
       "INFO 01-06 17:08:32 custom_all_reduce_utils.py:244] reading GPU P2P access cache from /home/ankus/.cache/vllm/gpu_p2p_access_cache_for_0,1.json\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:32 custom_all_reduce_utils.py:244] reading GPU P2P access cache from /home/ankus/.cache/vllm/gpu_p2p_access_cache_for_0,1.json\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m WARNING 01-06 17:08:32 custom_all_reduce.py:145] Custom allreduce is disabled because your platform lacks GPU P2P capability or P2P test failed. To silence this warning, specify disable_custom_all_reduce=True explicitly.\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:32 custom_all_reduce_utils.py:244] reading GPU P2P access cache from /home/ankus/.cache/vllm/gpu_p2p_access_cache_for_0,1.json\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m WARNING 01-06 17:08:32 custom_all_reduce.py:145] Custom allreduce is disabled because your platform lacks GPU P2P capability or P2P test failed. To silence this warning, specify disable_custom_all_reduce=True explicitly.\n",
       "WARNING 01-06 17:08:32 custom_all_reduce.py:145] Custom allreduce is disabled because your platform lacks GPU P2P capability or P2P test failed. To silence this warning, specify disable_custom_all_reduce=True explicitly.\n",
       "INFO 01-06 17:08:32 shm_broadcast.py:258] vLLM message queue communication handle: Handle(connect_ip='127.0.0.1', local_reader_ranks=[1], buffer_handle=(1, 4194304, 6, 'psm_9355f9e1'), local_subscribe_port=33709, remote_subscribe_port=None)\n",
       "INFO 01-06 17:08:32 model_runner.py:1110] Starting to load model ./output/merged_llm_dir...\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:32 model_runner.py:1110] Starting to load model ./output/merged_llm_dir...\n"
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:32 model_runner.py:1110] Starting to load model ./output/merged_llm_dir...\n"
      ]
     },
     {
@@ -141,11 +141,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:33 model_runner.py:1115] Loading model weights took 1.0249 GB\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:33 model_runner.py:1115] Loading model weights took 1.0249 GB\n",
       "INFO 01-06 17:08:33 model_runner.py:1115] Loading model weights took 1.0249 GB\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:36 worker.py:267] Memory profiling takes 3.07 seconds\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:36 worker.py:267] the current vLLM instance can use total_gpu_memory (10.75GiB) x gpu_memory_utilization (0.60) = 6.45GiB\n",
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:36 worker.py:267] model weights take 1.02GiB; non_torch_memory takes 0.11GiB; PyTorch activation peak memory takes 0.06GiB; the rest of the memory reserved for KV Cache is 5.25GiB.\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:36 worker.py:267] Memory profiling takes 3.07 seconds\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:36 worker.py:267] the current vLLM instance can use total_gpu_memory (10.75GiB) x gpu_memory_utilization (0.60) = 6.45GiB\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:36 worker.py:267] model weights take 1.02GiB; non_torch_memory takes 0.11GiB; PyTorch activation peak memory takes 0.06GiB; the rest of the memory reserved for KV Cache is 5.25GiB.\n",
       "INFO 01-06 17:08:36 worker.py:267] Memory profiling takes 3.13 seconds\n",
       "INFO 01-06 17:08:36 worker.py:267] the current vLLM instance can use total_gpu_memory (10.75GiB) x gpu_memory_utilization (0.60) = 6.45GiB\n",
       "INFO 01-06 17:08:36 worker.py:267] model weights take 1.02GiB; non_torch_memory takes 0.11GiB; PyTorch activation peak memory takes 0.31GiB; the rest of the memory reserved for KV Cache is 5.00GiB.\n",
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:39 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:39 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
      ]
     },
     {
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m(VllmWorkerProcess pid=2210851)\u001b[0;0m INFO 01-06 17:08:57 model_runner.py:1562] Graph capturing finished in 19 secs, took 0.32 GiB\n",
+      "\u001B[1;36m(VllmWorkerProcess pid=2210851)\u001B[0;0m INFO 01-06 17:08:57 model_runner.py:1562] Graph capturing finished in 19 secs, took 0.32 GiB\n",
       "INFO 01-06 17:08:57 model_runner.py:1562] Graph capturing finished in 19 secs, took 0.32 GiB\n",
       "INFO 01-06 17:08:57 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 24.90 seconds\n"
      ]
@@ -372,17 +372,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab4455ed4865d52",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import requests\n",
     "\n",
     "url = \"http://localhost:8000/v1/completions\"\n",
     "data = {\n",
-    "    \"model\": \"./merged-small-llm\",\n",
+    "    \"model\": config.save_path,\n",
     "    \"prompt\": \"질문: 사과의 색깔은? 답변:\",\n",
     "    \"max_tokens\": 50,\n",
     "    \"temperature\": 0.5\n",
@@ -390,7 +389,8 @@
     "\n",
     "response = requests.post(url, json=data)\n",
     "print(response.json()['choices'][0]['text'])"
-   ]
+   ],
+   "id": "e6ef0e590efded27"
   }
  ],
  "metadata": {
