Tried to train more layers

--- a/test_LLM_fine_tuning.ipynb
+++ b/test_LLM_fine_tuning.ipynb
@@ -30,6 +30,7 @@
    ],
    "source": [
     "import json\n",
+    "from config import config\n",
     "\n",
     "data = [\n",
     "    # --- 일반 상식 및 정보 ---\n",
@@ -131,7 +132,7 @@
     "    {\"instruction\": \"0으로 숫자를 나눌 수 있나요?\", \"output\": \"수학적으로 정의되지 않으므로 나눌 수 없습니다.\"},\n",
     "]\n",
     "\n",
-    "with open(\"./input/tinyllama_train_data.jsonl\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(config.jsonl_train_data_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    for entry in data:\n",
     "        f.write(json.dumps(entry, ensure_ascii=False) + \"\\n\")\n",
     "\n",
@@ -187,7 +188,7 @@
     "from config import config\n",
     "\n",
     "# 1. 데이터셋 로드\n",
-    "dataset = Dataset.from_json(\"./input/tinyllama_train_data.jsonl\")\n",
+    "dataset = Dataset.from_json(config.jsonl_train_data_path)\n",
     "\n",
     "# 2. 모델 및 토크나이저 로드\n",
     "model_id = config.base_model_path\n",
@@ -335,7 +336,7 @@
     "    # 100개 데이터라면 표현력을 높이기 위해 8보다 16을 추천 (메모리 허용 시)\n",
     "    r=16,  # # r(Rank): LoRA 행렬의 크기. 값이 클수록 표현력은 좋아지지만 메모리 사용량 커짐. 보통 8 또는 16을 권장, 메모리가 극도로 부족하면 4까지 도전!!!\n",
     "    lora_alpha=32,\n",
-    "    # [수정] q, v 뿐만 아니라 모든 리니어 레이어를 타겟으로 잡아 학습 효율 극대화.\n",
+    "    # [수정] q, v 뿐만 아니라 모든 리니어 레이어를 타겟으로 잡아 학습 효율 극대화. 그래봐야 trainable%: 1.1338 밖에 안 됨...\n",
     "    # 소형 모델일수록 더 많은 레이어를 학습하는 것이 한국어 습득에 유리.\n",
     "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"], \n",
     "    lora_dropout=0.1,    # 데이터가 적으므로 드롭아웃을 살짝 높여 과적합을 방지.\n",
