Added more Few-Shot examples in Local Data Scientist

--- a/999_few-shot_prompting.ipynb
+++ b/999_few-shot_prompting.ipynb
@@ -255,6 +255,106 @@
     "\n",
     "# 2. 데이터 분석 Few-shot 예시 정의 (데이터 요약 -> 가설 -> 결과 -> 제언)\n",
     "examples = [\n",
+    "#     # 1. 이커머스: 반품률 분석\n",
+    "#     {\n",
+    "#         \"raw_data\": \"신규 런칭 가전 브랜드: 판매량 5,000대 돌파, 반품률 15% (평균 대비 3배), 주요 사유 '설치 어려움'\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 판매량은 높으나 초기 반품률이 비정상적으로 높아 수익성이 악화됨.\n",
+    "# 2. 가설 설정: 제품 자체의 결함보다는 사용자 매뉴얼의 가독성이 낮아 설치에 실패했을 것이다.\n",
+    "# 3. 분석 결과: 고객센터 문의 데이터 분석 결과, 설치 단계 중 '배선 연결' 질문이 전체의 70%를 차지함.\n",
+    "# 4. 비즈니스 제언: QR코드를 활용한 '30초 설치 가이드 영상'을 제품 박스 상단에 부착하고, 자가 설치 지원 챗봇을 강화해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 2. 인사 관리: 직원 퇴사율\n",
+    "#     {\n",
+    "#         \"raw_data\": \"IT 기업 개발팀 퇴사율: 입사 1년 미만 신입 사원 퇴사율 35%, 면담 사유 '성장 기회 부족' 다수\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 신입 개발자의 조기 이탈 현상이 심화되어 채용 비용 손실이 발생함.\n",
+    "# 2. 가설 설정: 실무 투입 전 체계적인 온보딩 및 멘토링 프로그램이 부재하여 소외감을 느꼈을 것이다.\n",
+    "# 3. 분석 결과: 멘토링이 제공된 팀의 퇴사율은 5%인 반면, 방치된 팀은 45%로 극명한 차이를 보임.\n",
+    "# 4. 비즈니스 제언: '신입 사원 1:1 기술 멘토링' 제도를 의무화하고, 분기별 기술 세미나 발표 기회를 제공하여 성장 경험을 부여해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 3. 마케팅: 광고 채널 효율\n",
+    "#     {\n",
+    "#         \"raw_data\": \"SNS 광고 성과: 인스타그램 도달률 200% 증가, 전환율(CVR) 0.5% (하락), 클릭당 비용(CPC) 상승\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 광고 노출은 크게 늘었으나 실제 구매로 이어지는 비율은 오히려 낮아짐.\n",
+    "# 2. 가설 설정: 광고 타겟팅 범위가 너무 넓어져서 구매 의사가 낮은 대중에게까지 노출되었을 것이다.\n",
+    "# 3. 분석 결과: 클릭 고객의 페이지 체류 시간이 평균 5초 미만으로, 랜딩 페이지의 소구점이 고객 기대와 일치하지 않음.\n",
+    "# 4. 비즈니스 제언: 타겟 범위를 '관심사' 기반에서 '유사 구매 이력' 기반으로 좁히고, 광고 소재와 랜딩 페이지의 메시지를 일치시키는 리뉴얼 필요.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 4. 제조: 공정 불량률\n",
+    "#     {\n",
+    "#         \"raw_data\": \"반도체 공정 라인: 야간 교대 근무 시 불량률 12% (주간은 4%), 특정 장비 온도 센서 과열 기록\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 주야간 불량률 격차가 크며, 야간 시간대 장비 과열 문제가 발생함.\n",
+    "# 2. 가설 설정: 야간 조의 냉각 시스템 관리 미숙 또는 냉각수 교체 주기 지연이 원인일 것이다.\n",
+    "# 3. 분석 결과: 로그 데이터 확인 결과, 야간 시간대 냉각수 펌프 가동 압력이 기준치보다 낮게 설정되어 있음.\n",
+    "# 4. 비즈니스 제언: 냉각 시스템 가동을 자동화 설정으로 고정하고, 이상 온도 감지 시 즉시 야간 관리자에게 모바일 알림이 가는 시스템을 구축해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 5. 금융: 카드 소비 패턴\n",
+    "#     {\n",
+    "#         \"raw_data\": \"2030 세대 카드 이용: 해외 여행 결제액 50% 증가, 해외 직구 결제액 10% 감소, 환전 수수료 불만 민원 증가\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 직구보다는 직접 여행을 떠나는 수요가 폭증했으며, 환전 비용에 민감한 반응을 보임.\n",
+    "# 2. 가설 설정: 고물가로 인해 배송비가 비싼 직구 대신 직접 쇼핑을 선호하며, 실속형 여행자가 늘었을 것이다.\n",
+    "# 3. 분석 결과: 수수료 면제 혜택이 있는 타사 '트래블 카드'로의 고객 이탈 수치가 전월 대비 15% 상승함.\n",
+    "# 4. 비즈니스 제언: 해외 결제 수수료 면제 및 현지 ATM 출금 무료 혜택을 담은 신규 특화 카드 상품 런칭이 시급함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 6. 콘텐츠 플랫폼: 구독 유지율\n",
+    "#     {\n",
+    "#         \"raw_data\": \"OTT 서비스: 신규 가입자 20% 증가, 한 달 뒤 해지율 60%, 인기 예능 'A' 종료 시점과 일치\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 특정 킬러 콘텐츠 의존도가 너무 높아 콘텐츠 종료 후 대거 이탈 발생.\n",
+    "# 2. 가설 설정: 'A' 예능 시청자들에게 후속으로 볼만한 유사 장르의 추천이 이루어지지 않았을 것이다.\n",
+    "# 3. 분석 결과: 해지 고객의 80%가 'A' 외에 다른 콘텐츠를 2개 이하로 시청함.\n",
+    "# 4. 비즈니스 제언: 인기 콘텐츠 종료 전 유사 감성의 시리즈를 선공개하고, 개인화 추천 알고리즘에 '장르 확장성' 가중치를 부여해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 7. 식음료(F&B): 신메뉴 반응\n",
+    "#     {\n",
+    "#         \"raw_data\": \"카페 프랜차이즈: 시즌 음료 '민트초코라떼' 판매 비중 2%, SNS 언급량은 전체 1위, 재구매율 0.5%\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 화제성은 매우 높으나 실제 판매와 재구매로는 연결되지 않는 '바이럴 전용' 메뉴임.\n",
+    "# 2. 가설 설정: 비주얼은 사진 찍기에 좋으나 맛이 대중적이지 않아 일회성 소비에 그쳤을 것이다.\n",
+    "# 3. 분석 결과: POS 데이터 기준, 단품 주문은 많으나 베이커리류와의 세트 구매가 거의 없음(맛의 조화 실패).\n",
+    "# 4. 비즈니스 제언: 한정 판매로 화제성만 챙기고 조기 종료하거나, 맛을 대중적으로 개선하여 '시즌 2'로 재출시하여 매니아층을 확보해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 8. 소매업: 매장 진열 효율\n",
+    "#     {\n",
+    "#         \"raw_data\": \"대형마트 A지점: 주류 코너 매출 5% 상승, 안주류(스낵) 매출 30% 상승, 동선 분석상 두 코너 인접 배치 후 변화\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 주류와 안주류의 연관 구매가 활성화되어 객단가가 상승함.\n",
+    "# 2. 가설 설정: 물리적 거리가 가까워짐에 따라 '번들 구매'에 대한 인지적 노력이 줄어들었을 것이다.\n",
+    "# 3. 분석 결과: 장바구니 분석 결과 주류 구매자의 75%가 인접한 스낵류를 동시에 구매함.\n",
+    "# 4. 비즈니스 제언: 단순 인접 배치를 넘어 '와인+치즈', '맥주+나초' 등 구체적인 큐레이션 매대를 구성하여 교차 판매를 더욱 극대화해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 9. 교육 서비스: 학습 완강률\n",
+    "#     {\n",
+    "#         \"raw_data\": \"온라인 강의 플랫폼: 무료 강좌 완강률 5%, 유료 강좌(5만원 이상) 완강률 45%, 챕터 3에서 이탈률 최고조\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 지불 금액에 따라 학습 의지가 크게 다르며, 강의 초반 특정 구간에 고비가 존재함.\n",
+    "# 2. 가설 설정: 챕터 3의 난이도가 갑자기 높아지거나 실습 환경 구축이 어려워 포기자가 발생할 것이다.\n",
+    "# 3. 분석 결과: 챕터 3의 Q&A 게시글 수가 타 챕터 대비 4배 많으며 대부분 '에러 해결' 관련임.\n",
+    "# 4. 비즈니스 제언: 챕터 3 시작 전 '트러블슈팅 가이드'를 강화하고, 완강 시 일정 금액을 환급해주는 '챌린지형 환급반' 모델을 도입하여 동기를 부여해야 함.\n",
+    "# \"\"\"\n",
+    "#     },\n",
+    "#     # 10. 헬스케어: 앱 리텐션\n",
+    "#     {\n",
+    "#         \"raw_data\": \"운동 기록 앱: 일일 활성 사용자(DAU) 평일 대비 주말 40% 하락, 주말 알림 클릭률 2%\",\n",
+    "#         \"analysis_report\": \"\"\"\n",
+    "# 1. 데이터 요약: 주말에는 사용자의 운동 의지가 급격히 꺾이며 기존 알림이 효과를 발휘하지 못함.\n",
+    "# 2. 가설 설정: 평일과 동일한 '강도 높은 운동' 독려 알림이 주말의 휴식 심리와 충돌하여 거부감을 주었을 것이다.\n",
+    "# 3. 분석 결과: 주말에 '가벼운 산책'이나 '스트레칭' 제안 알림을 보낸 실험군은 리텐션이 15% 높게 나타남.\n",
+    "# 4. 비즈니스 제언: 주말 전용 '휴식 및 리프레시' 컨셉의 콘텐츠를 배포하고 알림 문구를 부드러운 톤으로 변경하는 개인화 전략 필요.\n",
+    "# \"\"\"\n",
+    "#     },\n",
     "    {\n",
     "        \"raw_data\": \"A쇼핑몰 8월 매출: 전월 대비 여성 의류 30% 증가, 남성 의류 5% 감소, 장바구니 포기율 40%\",\n",
     "        \"analysis_report\": \"\"\"\n",
