--- a/999_few-shot_prompting.ipynb
+++ b/999_few-shot_prompting.ipynb
@@ -242,29 +242,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f768301ae57408b9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2893835/3142606401.py:7: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "로컬 데이터 분석가가 보고서를 생성 중...\n",
       "------------------------------\n",
-      "1. 데이터 요약: 10월 로그에서는 야간 시간대(22시~02시)의 주문 수가 15% 감소, 배달비 평균이 2,000원 상승, 라이더 수도 10% 감소가 확인되었습니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 10월 배달 앱 로그에 따르면 야간 시간대(22시~02시) 주문량이 15% 하락했습니다.\n",
+      "   - 동일한 기간 동안 배달비는 평균 2,000원 상승했습니다.\n",
+      "   - 라이더 수는 10% 감소했습니다.\n",
       "\n",
       "2. 가설 설정:\n",
-      "- 야간 시간대에서의 주문 하락은 고객의 요구사항 변화로 인한 것일 수 있습니다.\n",
-      "- 배달비 상승과 라이더 수 감소는 라이더 부족으로 인한 추가적인 배달비 요금 조정이 있었을 수 있습니다.\n",
+      "   - 야간 시간대 주문 감소와 배달비 상승은 라이더 수 감소로 인한 공급 부족과 관련이 있을 것이다.\n",
+      "   - 라이더 수 감소는 야간 시간대의 낮은 인센티브나 위험성 증가로 인해 발생했을 가능성이 높다.\n",
       "\n",
       "3. 분석 결과:\n",
-      "- 고객 설문조사를 통해 야간 시간대에서의 주문 하락은 배달비 상승으로 인한 고객 불만이 있다는 피드백을 받았습니다.\n",
-      "- 라이더 부족으로 인한 추가적인 배달비 요금 조정은 확인되지 않았습니다.\n",
+      "   - 야간 시간대에 주문이 감소한 시기와 라이더 수 감소가 일치하는 경향을 보였습니다.\n",
+      "   - 배달비 상승과 주문 감소 간의 상관관계가 85% 확인되었습니다.\n",
+      "   - 라이더들의 야간 근무 인센티브와 관련된 설문조사 결과, 야간 시간대의 위험성 증가와 낮은 인센티브가 주요 원인으로 나타났습니다.\n",
       "\n",
       "4. 비즈니스 제언:\n",
-      "- 고객의 불만을 해소하기 위해서는 야간 시간대에서의 배달비를 조정하여 고객 요구사항에 맞게 가격을 절감할 필요가 있습니다.\n",
-      "- 라이더 부족 문제는 추후 개선 방안을 수립하여 해결해야 합니다.\n",
+      "   - 야간 시간대 라이더 수를 증원하기 위해 추가적인 인센티브 프로그램을 도입해야 합니다.\n",
+      "   - 예를 들어, 야간 시간대에만 적용되는 보너스 지급이나 안전 장비 제공 등을 고려할 수 있습니다.\n",
+      "   - 또한, 배달비 상승으로 인한 고객 불만을 완화하기 위해 특정 조건 하에 무료 배달 혜택을 제공하는 것도 효과적일 것입니다.\n",
       "\n",
       "\n"
      ]
@@ -277,7 +290,7 @@
     "from langchain_core.prompts.prompt import PromptTemplate\n",
     "\n",
     "# 1. 로컬 LLM 설정  # # TODO Ollama의 mistral-7B, mistral-nemo, mistral-small 상업적 사용 가능 But!!! 3060(mistral-nemo(12B)) 이나 VRAM(3090/4090 mistral-small(22B)) 필요\n",
-    "llm = Ollama(model=\"mistral\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
+    "llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
     "# llm = OllamaLLM(model=\"mistral\", temperature=0)  # # TODO 차후 최신 OllamaLLM 로 변경 필요\n",
     "\n",
     "# 2. 데이터 분석 Few-shot 예시 정의 (데이터 요약 -> 가설 -> 결과 -> 제언)\n",
@@ -445,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c6eb056f2d651ccf",
    "metadata": {},
    "outputs": [
@@ -456,81 +469,92 @@
       "\n",
       "target_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\n",
       "------------------------------\n",
-      "1. 데이터 요약: 20대 유입량의 급증으로 인해 여성 패션 매출이 20% 상승하였으나, 남성 패션은 -5% 감소한 것으로 확인됨.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - A쇼핑몰의 8월 매출에서 여성 패션 부문은 20% 증가하였으나, 남성 패션 부문은 5% 감소하였습니다.\n",
+      "   - 20대 고객 유입량이 급증하였습니다.\n",
       "\n",
       "2. 가설 설정:\n",
-      "    - 20대 유입량의 급증이 여성 고객에게만 더 강력한 소구력을 가졌을 것이다.\n",
-      "    - 20대 유입량의 급증은 남성 패션 매출의 감소를 주도했을 것이다.\n",
+      "   - 20대 고객이 주로 여성 패션을 구매하여 여성 패션 매출이 증가한 것으로 보입니다.\n",
+      "   - 남성 패션의 감소는 20대 남성 고객의 관심 부족이나 다른 요인에 의해 발생했을 가능성이 큽니다.\n",
       "\n",
       "3. 분석 결과:\n",
-      "    - 여성 고객의 재방문율이 남성보다 2.5배 높음으로, 가설1은 확인됨.\n",
-      "    - 20대 유입량의 급증이 남성 패션 매출의 감소를 주도했을 것으로, 가설2는 확인되지 않음.\n",
+      "   - 20대 여성 고객의 구매 비율이 전체 여성 패션 매출의 60%를 차지하고 있습니다.\n",
+      "   - 20대 남성 고객의 구매 비율이 전체 남성 패션 매출의 15%에 불과합니다.\n",
+      "   - 20대 남성 고객의 장바구니 포기율은 30%로, 여성 고객보다 높습니다.\n",
       "\n",
       "4. 비즈니스 제언:\n",
-      "    - 9월 신상품 런칭 시 남성 고객 전용 '첫 구매 할인 쿠폰'을 발행하여 이탈을 방지해야 함. (이미 확인된 결과에서 유도됨)\n",
-      "    - 남성 패션 매출의 감소를 해소하기 위한 추가 전략이 필요할 것으로 예상됨. (가설2가 확인되지 않음에 따른 추측)\n",
+      "   - 20대 남성 고객을 타겟으로 한 마케팅 전략을 강화하여 남성 패션 매출을 회복해야 합니다.\n",
+      "   - 20대 남성 고객에게 맞춤형 할인 쿠폰이나 특별 이벤트를 제공하여 구매 유도를 시도해야 합니다.\n",
+      "   - 장바구니 포기율을 줄이기 위해 20대 남성 고객의 구매 경험을 개선하는 방안을 모색해야 합니다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약: 특정 세정 장비의 온도 상승으로 인한 불량 발생 증가 추측.\n",
-      "2. 가설 설정: 세정 장비 온도 조정에 따른 불량 감지 율의 변동이 있을 것으로 예상됨.\n",
-      "3. 분석 결과: 데이터 분석 결과 2도 온도 상승 시 0.5% 증가된 불량 발생 확인됨.\n",
-      "4. 비즈니스 제언: 세정 장비의 온도를 조정하여 불량 감지 율을 줄이고, 품질 보증을 위한 추가적인 검사 및 제어 절차 수립이 필요함.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 반도체 제조 라인의 수율은 95%를 유지하고 있습니다.\n",
+      "   - 특정 세정 장비의 온도가 2도 상승했습니다.\n",
+      "   - 불량 감지율이 0.5% 증가했습니다.\n",
+      "\n",
+      "2. 가설 설정:\n",
+      "   - 세정 장비의 온도 상승이 반도체 제조 과정에서 발생하는 불량률 증가와 관련이 있을 것이다.\n",
+      "\n",
+      "3. 분석 결과:\n",
+      "   - 세정 장비 온도가 상승한 시기와 불량 감지율이 증가한 시기가 일치함을 확인했습니다.\n",
+      "   - 온도 상승 전후로 불량률의 변동 패턴을 분석한 결과, 온도 상승 후 불량률이 증가하는 경향이 명확히 나타났습니다.\n",
+      "\n",
+      "4. 비즈니스 제언:\n",
+      "   - 세정 장비의 온도를 안정적으로 유지하기 위한 냉각 시스템 개선 및 온도 모니터링 시스템 도입이 필요합니다.\n",
+      "   - 정기적인 유지보수와 온도 점검을 통해 장비의 안정성을 확보하고, 불량률을 최소화해야 합니다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\n",
       "------------------------------\n",
-      "1. 데이터 요약: 신규 앱 서비스에서는 주간 활성 사용자(WAU)가 15% 상승하였으나, 결제 전환율은 2% 정체되었고 결제 페이지 이탈률이 70%로 매우 높아졌습니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 주간 활성 사용자(WAU)가 15% 증가하여 앱의 인기가 높아지고 있음을 보여줌.\n",
+      "   - 그러나 결제 전환율은 2%로 정체되어 있으며, 이는 사용자들이 결제를 완료하지 못하고 이탈하고 있음을 시사함.\n",
+      "   - 결제 페이지 이탈률이 70%에 달하여, 결제 과정에서 심각한 문제점이 존재함을 알림.\n",
       "\n",
       "2. 가설 설정:\n",
-      "- 신규 사용자의 이해도와 사용 경험에 대한 문제점이 있어 결제 전환율이 저하되었을 것입니다.\n",
-      "- 결제 페이지 설계나 UX/UI 등의 문제로 인해 사용자가 결제 페이지에서 이탈하고 있을 수 있습니다.\n",
+      "   - 결제 과정의 복잡성이나 불편함이 사용자 이탈의 주요 원인일 것이다.\n",
+      "   - 결제 페이지의 디자인이나 사용자 경험(UX)이 개선될 필요가 있을 것이다.\n",
       "\n",
       "3. 분석 결과:\n",
-      "- 신규 사용자와 기존 사용자의 이해도와 사용 경험을 분석하여 문제점을 파악합니다.\n",
-      "- A/B 테스팅을 통해 결제 페이지의 UX/UI를 개선하고, 신규 사용자에게 가이드나 튜토리얼을 제공하여 이해도와 사용 경험을 향상시키는 것이 필요합니다.\n",
+      "   - 사용자 피드백을 분석한 결과, 결제 과정에서 발생하는 오류와 복잡한 절차가 주요 이탈 요인으로 확인됨.\n",
+      "   - 결제 페이지의 로딩 속도가 느리고, 결제 옵션이 제한적임이 발견됨.\n",
       "\n",
       "4. 비즈니스 제언:\n",
-      "- 신규 사용자의 이해도와 사용 경험을 개선하여 결제 전환율을 높이고, 결제 페이지 이탈률을 줄이는 것이 중요합니다.\n",
-      "- 신규 사용자에게 가이드나 튜토리얼을 제공하여 이해도와 사용 경험을 향상시키고, A/B 테스팅을 통해 결제 페이지의 UX/UI를 개선하는 것이 필요합니다.\n",
+      "   - 결제 과정의 단순화와 사용자 경험(UX) 개선을 통해 결제 전환율을 높여야 함.\n",
+      "   - 결제 페이지의 로딩 속도를 개선하고, 다양한 결제 옵션을 제공하여 사용자 편의성을 높여야 함.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약: 주말에는 주문량이 증가하였으나 라이더 배차 시간과 고객 불만 건수가 증가함을 확인할 수 있습니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 주말 주문량이 15% 증가하였습니다.\n",
+      "   - 라이더의 배차 시간이 10분 연장되었습니다.\n",
+      "   - 고객 불만 건수가 2배로 증가하였습니다.\n",
       "\n",
       "2. 가설 설정:\n",
-      "- 주말에는 고객의 요구사항이 높아져서 라이더 배차 시간이 길어지고 불만 건수가 증가했을 것입니다.\n",
-      "- 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하여 주문량이 증가했을 것입니다.\n",
+      "   - 주말 주문량 급증으로 인해 라이더의 배차 시간과 고객 불만이 증가했을 가능성이 높다.\n",
+      "   - 주말에 발생하는 특정 이벤트나 프로모션이 주문량을 급증시켰을 것이다.\n",
       "\n",
       "3. 분석 결과:\n",
-      "- 데이터 분석 결과, 주말에는 고객의 요구사항이 높아져서 라이더 배차 시간이 길어지고 불만 건수가 증가했습니다.\n",
-      "- 또한, 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하여 주문량이 증가했습니다.\n",
+      "   - 주말 주문량 급증 시점과 라이더 배차 시간 연장, 고객 불만 증가 시점이 일치함이 확인되었습니다.\n",
+      "   - 주말에 진행된 특정 이벤트나 프로모션이 주문량을 급증시켰고, 이를 처리하지 못해 배차 시간이 연장되고 고객 불만이 증가한 것으로 보입니다.\n",
       "\n",
       "4. 비즈니스 제언:\n",
-      "- 고객의 요구사항을 더 잘 만족하기 위해서는 라이더 배차 시간을 줄이고 고객 불만에 대한 대처방안을 개선해야 합니다.\n",
-      "- 또한, 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하고 있으므로, 서비스 품질을 유지하기 위해서는 추가적인 라이더를 채용하거나 라이더의 수익을 보장하는 방안을 고려해야 합니다.\n",
+      "   - 주말 주문량 급증을 대비하여 라이더 인력을 추가로 배치하거나, 주말에만 적용되는 특별 할인이나 프로모션을 조정해야 합니다.\n",
+      "   - 고객 불만을 줄이기 위해 주말 배차 시간을 단축할 수 있는 로직을 도입하고, 고객에게 사전 알림을 제공하여 만족도를 높여야 합니다.\n",
       "\n",
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\ntarget_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\\n------------------------------\\n1. 데이터 요약: 20대 유입량의 급증으로 인해 여성 패션 매출이 20% 상승했지만, 남성 패션은 -5% 감소한 것으로 나타났습니다.\\n\\n2. 가설 설정:\\n    - 20대 유입량의 급증이 여성 고객에게만 더 강력한 소구력을 가졌을 것이다.\\n    - 20대 유입량의 급증은 남성 패션 매출의 감소를 주도했을 것이다.\\n\\n3. 분석 결과:\\n    - 데이터 확인 결과, 20대 유입량이 여성 고객에게만 더 강력한 소구력을 가졌음이 확인되었습니다.\\n    - 또한, 남성 패션 매출의 감소는 20대 유입량의 급증으로 주도된 것으로 나타났습니다.\\n\\n4. 비즈니스 제언:\\n    - 9월 신상품 런칭 시, 남성 고객에게 더 강력한 소구력을 주기 위해 20대 유입량 유치 활동을 강화하는 것이 필요합니다.\\n    - 또한, 남성 패션 매출의 감소를 보완하기 위해서는 남성 고객에게 더 맞춤화된 마케팅 전략을 도입하는 것이 필요합니다.\\n\\n\\n\\n\\ntarget_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\\n------------------------------\\n1. 데이터 요약: 특정 세정 장비의 온도 상승으로 인한 불량 제품 생성 증가.\\n2. 가설 설정: 세정 장비의 온도 조절 문제로 유발된 현상이며, 이를 해결하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요할 것이다.\\n3. 분석 결과: 데이터 분석 결과 특정 세정 장비의 온도 상승으로 인한 불량 제품 생성 증가에 대응하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요함이 확인됨.\\n4. 비즈니스 제언: 세정 장비의 온도 조절 문제를 해결하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요함으로, 이를 지속적으로 모니터링하고 필요한 대응을 취해야 함.\\n\\n\\n\\n\\ntarget_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\\n------------------------------\\n1. 데이터 요약: 신규 앱 서비스에서는 주간 활성 사용자(WAU)가 15% 상승하였으나, 결제 전환율은 2% 정체되었고 결제 페이지 이탈률이 70%로 매우 높아졌습니다.\\n\\n2. 가설 설정:\\n- 신규 사용자의 이해도와 사용 경험에 대한 불만족감이 결제 페이지 이탈을 유발했을 것입니다.\\n- 결제 전환율이 정체된 것은 신규 사용자의 구매 의도가 있음에도 불구하고 결제 페이지 이탈로 인한 문제입니다.\\n\\n3. 분석 결과:\\n- 사용자 설문조사를 통해 신규 사용자의 이해도와 사용 경험에 대한 불만족감을 확인할 수 있었습니다.\\n- 결제 페이지 이탈 분석을 통해 결제 페이지의 UX/UI 문제를 파악할 수 있었습니다.\\n\\n4. 비즈니스 제언:\\n- 신규 사용자에게 더 나은 이해도와 사용 경험을 제공하기 위한 교육 및 가이드라인 작성이 필요합니다.\\n- 결제 페이지의 UX/UI를 개선하여 이탈률을 줄이고 결제 전환율을 증대시키는 데 노력해야 합니다.\\n\\n\\n\\n\\ntarget_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\\n------------------------------\\n1. 데이터 요약: 주말에는 주문량이 증가하였으나 라이더 배차 시간과 고객 불만 건수가 상승했습니다.\\n\\n2. 가설 설정:\\n주말에 많은 고객들이 배달 서비스를 사용하여 라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승을 유발했을 것입니다.\\n\\n3. 분석 결과:\\n데이터 분석 결과, 주말에 라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승은 일치하는 추세를 보였습니다.\\n\\n4. 비즈니스 제언:\\n라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승을 해소하기 위해서는, 주말에도 적절한 수량의 라이더를 배치하여 배달 서비스의 품질을 유지하고 고객 불만을 줄이는 것이 필요합니다.\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -547,135 +571,7 @@
     "        # Suffix에서 시작한 문구를 합쳐서 출력\n",
     "        print(f\"1. 데이터 요약:{response}\\n\\n\\n\")\n",
     "    except Exception as e:\n",
-    "        print(f\"연결 오류: {e}. Ollama 서버가 켜져 있는지 확인하세요.\\n\")\n",
-    "\"\"\" temperature=0\n",
-    "target_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 20대 유입량의 급증으로 인해 여성 패션 매출이 20% 상승했지만, 남성 패션은 -5% 감소한 것으로 나타났습니다.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "    - 20대 유입량의 급증이 여성 고객에게만 더 강력한 소구력을 가졌을 것이다.\n",
-    "    - 20대 유입량의 급증은 남성 패션 매출의 감소를 주도했을 것이다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "    - 데이터 확인 결과, 20대 유입량이 여성 고객에게만 더 강력한 소구력을 가졌음이 확인되었습니다.\n",
-    "    - 또한, 남성 패션 매출의 감소는 20대 유입량의 급증으로 주도된 것으로 나타났습니다.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "    - 9월 신상품 런칭 시, 남성 고객에게 더 강력한 소구력을 주기 위해 20대 유입량 유치 활동을 강화하는 것이 필요합니다.\n",
-    "    - 또한, 남성 패션 매출의 감소를 보완하기 위해서는 남성 고객에게 더 맞춤화된 마케팅 전략을 도입하는 것이 필요합니다.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 특정 세정 장비의 온도 상승으로 인한 불량 제품 생성 증가.\n",
-    "2. 가설 설정: 세정 장비의 온도 조절 문제로 유발된 현상이며, 이를 해결하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요할 것이다.\n",
-    "3. 분석 결과: 데이터 분석 결과 특정 세정 장비의 온도 상승으로 인한 불량 제품 생성 증가에 대응하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요함이 확인됨.\n",
-    "4. 비즈니스 제언: 세정 장비의 온도 조절 문제를 해결하기 위해서는 온도 조절 시스템을 검사하고 필요에 따라 수리가 필요함으로, 이를 지속적으로 모니터링하고 필요한 대응을 취해야 함.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 신규 앱 서비스에서는 주간 활성 사용자(WAU)가 15% 상승하였으나, 결제 전환율은 2% 정체되었고 결제 페이지 이탈률이 70%로 매우 높아졌습니다.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "- 신규 사용자의 이해도와 사용 경험에 대한 불만족감이 결제 페이지 이탈을 유발했을 것입니다.\n",
-    "- 결제 전환율이 정체된 것은 신규 사용자의 구매 의도가 있음에도 불구하고 결제 페이지 이탈로 인한 문제입니다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "- 사용자 설문조사를 통해 신규 사용자의 이해도와 사용 경험에 대한 불만족감을 확인할 수 있었습니다.\n",
-    "- 결제 페이지 이탈 분석을 통해 결제 페이지의 UX/UI 문제를 파악할 수 있었습니다.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "- 신규 사용자에게 더 나은 이해도와 사용 경험을 제공하기 위한 교육 및 가이드라인 작성이 필요합니다.\n",
-    "- 결제 페이지의 UX/UI를 개선하여 이탈률을 줄이고 결제 전환율을 증대시키는 데 노력해야 합니다.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 주말에는 주문량이 증가하였으나 라이더 배차 시간과 고객 불만 건수가 상승했습니다.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "주말에 많은 고객들이 배달 서비스를 사용하여 라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승을 유발했을 것입니다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "데이터 분석 결과, 주말에 라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승은 일치하는 추세를 보였습니다.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "라이더 부족으로 인한 배차 시간 증가와 고객 불만의 상승을 해소하기 위해서는, 주말에도 적절한 수량의 라이더를 배치하여 배달 서비스의 품질을 유지하고 고객 불만을 줄이는 것이 필요합니다.\n",
-    "\"\"\"\n",
-    "# # TODO :::::::::::::::::::::::::::::::::::::::::::::::\n",
-    "\"\"\"temperature=0.1\n",
-    "target_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 20대 유입량의 급증으로 인해 여성 패션 매출이 20% 상승하였으나, 남성 패션은 -5% 감소한 것으로 확인됨.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "    - 20대 유입량의 급증이 여성 고객에게만 더 강력한 소구력을 가졌을 것이다.\n",
-    "    - 20대 유입량의 급증은 남성 패션 매출의 감소를 주도했을 것이다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "    - 여성 고객의 재방문율이 남성보다 2.5배 높음으로, 가설1은 확인됨.\n",
-    "    - 20대 유입량의 급증이 남성 패션 매출의 감소를 주도했을 것으로, 가설2는 확인되지 않음.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "    - 9월 신상품 런칭 시 남성 고객 전용 '첫 구매 할인 쿠폰'을 발행하여 이탈을 방지해야 함. (이미 확인된 결과에서 유도됨)\n",
-    "    - 남성 패션 매출의 감소를 해소하기 위한 추가 전략이 필요할 것으로 예상됨. (가설2가 확인되지 않음에 따른 추측)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 특정 세정 장비의 온도 상승으로 인한 불량 발생 증가 추측.\n",
-    "2. 가설 설정: 세정 장비 온도 조정에 따른 불량 감지 율의 변동이 있을 것으로 예상됨.\n",
-    "3. 분석 결과: 데이터 분석 결과 2도 온도 상승 시 0.5% 증가된 불량 발생 확인됨.\n",
-    "4. 비즈니스 제언: 세정 장비의 온도를 조정하여 불량 감지 율을 줄이고, 품질 보증을 위한 추가적인 검사 및 제어 절차 수립이 필요함.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 신규 앱 서비스에서는 주간 활성 사용자(WAU)가 15% 상승하였으나, 결제 전환율은 2% 정체되었고 결제 페이지 이탈률이 70%로 매우 높아졌습니다.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "- 신규 사용자의 이해도와 사용 경험에 대한 문제점이 있어 결제 전환율이 저하되었을 것입니다.\n",
-    "- 결제 페이지 설계나 UX/UI 등의 문제로 인해 사용자가 결제 페이지에서 이탈하고 있을 수 있습니다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "- 신규 사용자와 기존 사용자의 이해도와 사용 경험을 분석하여 문제점을 파악합니다.\n",
-    "- A/B 테스팅을 통해 결제 페이지의 UX/UI를 개선하고, 신규 사용자에게 가이드나 튜토리얼을 제공하여 이해도와 사용 경험을 향상시키는 것이 필요합니다.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "- 신규 사용자의 이해도와 사용 경험을 개선하여 결제 전환율을 높이고, 결제 페이지 이탈률을 줄이는 것이 중요합니다.\n",
-    "- 신규 사용자에게 가이드나 튜토리얼을 제공하여 이해도와 사용 경험을 향상시키고, A/B 테스팅을 통해 결제 페이지의 UX/UI를 개선하는 것이 필요합니다.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "target_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\n",
-    "------------------------------\n",
-    "1. 데이터 요약: 주말에는 주문량이 증가하였으나 라이더 배차 시간과 고객 불만 건수가 증가함을 확인할 수 있습니다.\n",
-    "\n",
-    "2. 가설 설정:\n",
-    "- 주말에는 고객의 요구사항이 높아져서 라이더 배차 시간이 길어지고 불만 건수가 증가했을 것입니다.\n",
-    "- 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하여 주문량이 증가했을 것입니다.\n",
-    "\n",
-    "3. 분석 결과:\n",
-    "- 데이터 분석 결과, 주말에는 고객의 요구사항이 높아져서 라이더 배차 시간이 길어지고 불만 건수가 증가했습니다.\n",
-    "- 또한, 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하여 주문량이 증가했습니다.\n",
-    "\n",
-    "4. 비즈니스 제언:\n",
-    "- 고객의 요구사항을 더 잘 만족하기 위해서는 라이더 배차 시간을 줄이고 고객 불만에 대한 대처방안을 개선해야 합니다.\n",
-    "- 또한, 주말에는 휴대폰 사용자의 활동량이 높아져서 배달 서비스를 더 많이 이용하고 있으므로, 서비스 품질을 유지하기 위해서는 추가적인 라이더를 채용하거나 라이더의 수익을 보장하는 방안을 고려해야 합니다.\n",
-    "\"\"\""
+    "        print(f\"연결 오류: {e}. Ollama 서버가 켜져 있는지 확인하세요.\\n\")"
    ]
   },
   {
