mistral-small, mixtral, mistral-nemo work at 2080ti(2ea)

--- a/999_few-shot_prompting.ipynb
+++ b/999_few-shot_prompting.ipynb
@@ -250,8 +250,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2946924/3174754699.py:7: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
-      "  llm = Ollama(model=\"mistral-nemo\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n"
+      "/tmp/ipykernel_2949265/3142606401.py:7: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n"
      ]
     },
     {
@@ -260,10 +260,24 @@
      "text": [
       "로컬 데이터 분석가가 보고서를 생성 중...\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약: 10월 배달 앱 로그에서 야간 시간대 주문량이 15% 줄고 배달비가 평균 2,000원 상승했으며 라이더 수가 10% 감소함.\n",
-      "2. 가설 설정: 야간 시간대의 주문량 감소가 배달비 상승과 라이더 수 감소로 인한 것일 것이다.\n",
-      "3. 분석 결과: 야간 시간대 주문량 감소가 배달비 상승(상관계수 0.75)과 라이더 수 감소(상관계수 0.68)와 양성적으로 연관됨.\n",
-      "4. 비즈니스 제언: 야간 시간대의 주문량을 회복시키기 위해 배달비를 인하하고 라이더 수를 보강해야 함. 또한, 야간 시간대에 한해 주문 시 배송비 할인 쿠폰을 제공할 것을 고려해야 함.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 10월 야간 시간대(22시~02시) 주문량이 15% 하락했습니다.\n",
+      "   - 배달비 평균이 2,000원 상승했습니다.\n",
+      "   - 라이더 수가 10% 감소했습니다.\n",
+      "\n",
+      "2. 가설 설정:\n",
+      "   - 야간 시간대의 주문 감소는 배달비 상승과 라이더 수 감소로 인해 발생했을 가능성이 높습니다.\n",
+      "   - 높은 배달비와 부족한 라이더 수로 인해 고객들이 다른 배달 앱으로 이동했을 가능성도 있습니다.\n",
+      "\n",
+      "3. 분석 결과:\n",
+      "   - 야간 시간대 주문 하락 시점과 배달비 상승, 라이더 수 감소 시점이 일치합니다.\n",
+      "   - 고객 만족도 조사 결과, 높은 배달비와 긴 대기 시간이 주요 불만 사항임이 확인되었습니다.\n",
+      "   - 경쟁 배달 앱 사용자 증가 추세가 관찰됨.\n",
+      "\n",
+      "4. 비즈니스 제언:\n",
+      "   - 야간 시간대 배달비 인하 정책을 도입하여 고객 유치를 시도해야 합니다.\n",
+      "   - 라이더 수를 증원하거나, 야간 시간대에 대한 추가 보상을 제공하여 라이더의 동기부여를 높여야 합니다.\n",
+      "   - 경쟁 배달 앱과의 차별화된 서비스를 제공하여 고객 이탈을 방지해야 합니다.\n",
       "\n",
       "\n"
      ]
@@ -275,8 +289,8 @@
     "from langchain_core.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain_core.prompts.prompt import PromptTemplate\n",
     "\n",
-    "# 1. 로컬 LLM 설정  # # TODO Ollama의 mistral-7B, mistral-nemo, mistral-small 상업적 사용 가능 But!!! 3060(mistral-nemo(12B)) 이나 VRAM(3090/4090 mistral-small(22B)) 필요\n",
-    "llm = Ollama(model=\"mistral-nemo\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
+    "# 1. 로컬 LLM 설정  # # TODO Ollama의 mistral-7B, mistral-nemo, mistral-small 상업적 사용 가능. 2080ti(2ea)에서 mistral-small, mixtral, mistral-nemo 실행 가능 확인\n",
+    "llm = Ollama(model=\"mistral-small\", temperature=0.1) # # 예시(Few-shot) 형식을 엄격히 따르고, 답변이 영어되는 현상 방지 위해 temperature를 0 또는 0.1로 낮춤\n",
     "# llm = OllamaLLM(model=\"mistral\", temperature=0)  # # TODO 차후 최신 OllamaLLM 로 변경 필요\n",
     "\n",
     "# 2. 데이터 분석 Few-shot 예시 정의 (데이터 요약 -> 가설 -> 결과 -> 제언)\n",
@@ -455,67 +469,81 @@
       "\n",
       "target_input: A쇼핑몰: 여성 패션 매출 +20%, 남성 패션 -5%, 20대 유입량 급증.\n",
       "------------------------------\n",
-      "1. 데이터 요약:8월 A쇼핑몰의 매출에서 여성 패션이 20% 증가하고, 남성 패션은 5% 감소하였으며, 20대의 유입량이 급격히 늘어났습니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   8월 A쇼핑몰의 여성 패션 부문은 매출이 20% 증가하였으나, 남성 패션 부문은 5% 감소하였으며, 특히 20대 고객 유입량이 급증하였다.\n",
       "\n",
       "2. 가설 설정:\n",
-      "   - 여성 패션의 매출 증가는 여름 시즌 세일이나 신상품 출시 등의 영향으로 인해 발생했을 수 있습니다.\n",
-      "   - 남성 패션의 매출 감소가 남성 고객층의 이탈을 의미할 수도 있습니다.\n",
-      "   - 20대의 유입량 급증은 신규 마케팅 전략이 효과를 발휘한 결과일 가능성이 높습니다.\n",
+      "   20대 고객의 유입량 급증이 여성 패션 부문의 매출 증가를 주도했을 가능성이 높다. 또한, 20대 고객들이 남성 패션에 대한 관심도가 낮아 남성 패션 부문 매출이 감소했을 수 있다.\n",
       "\n",
       "3. 분석 결과:\n",
-      "   - 여성 패션의 매출 증가는 지난 달에 비해 신상품 구매가 15% 증가한 것이 주요 원인으로 확인되었습니다.\n",
-      "   - 남성 패션의 매출 감소가 발생한 시점부터 남성 고객의 이탈이 시작되었으며, 현재까지 약 3% 정도의 이탈이 확인됩니다.\n",
-      "   - 20대의 유입량 급증은 소셜미디어 마케팅 캠페인의 영향으로 인해 15~19세 연령층에서 유입량이 40% 증가한 것이 주요 원인으로 확인되었습니다.\n",
+      "   데이터 분석 결과, 20대 고객의 구매 비율 중 여성 패션 구매가 70%를 차지하고 있으며, 남성 패션 구매는 15%에 불과함이 확인되었다. 또한, 20대 고객들의 재구매율이 여성 패션 부문에서는 30%로 높게 나타났으나, 남성 패션 부문에서는 10%에 그쳤다.\n",
       "\n",
       "4. 비즈니스 제언:\n",
-      "   - 남성 패션의 매출 감소를 방지하기 위해, 남성 고객을 대상으로 한 특별 할인 이벤트나 신상품 런칭 행사를 진행하는 것을 고려해보시기 바랍니다.\n",
-      "   - 20대의 유입량을 유지하고 확대하기 위해서는 소셜미디어 마케팅 캠페인을 지속적으로 운영하고, 새로운 플랫폼으로의 진출을 검토해보는 것이 좋겠습니다.\n",
+      "   20대 고객을 타겟으로 한 마케팅 전략을 강화하여 여성 패션 부문의 매출 증가를 지속적으로 유지해야 한다. 또한, 남성 패션 부문에 대한 관심도를 높이기 위해 20대 남성 고객을 위한 특별 프로모션이나 이벤트를 기획하여 재구매율을 향상시키는 것이 필요하다. 예를 들어, '남성 패션 첫 구매 할인 쿠폰' 발행이나 '20대 남성 전용 패션 트렌드 리포트' 제공 등을 고려할 수 있다.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 반도체 제조 라인: 수율 95% 유지 중, 특정 세정 장비 온도 2도 상승, 불량 감지 0.5% 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약: 반도체 제조 라인의 전체적인 수율이 95%로 유지되고 있지만, 특정 세정 장비의 온도가 2도 상승하고 불량 감지율이 0.5% 증가하고 있습니다.\n",
-      "2. 가설 설정: 세정 장비의 온도 상승으로 인해 반도체 칩이 손상되어 불량이 발생했을 가능성이 높습니다.\n",
-      "3. 분석 결과: 세정 장비 온도와 불량 감지율 간의 상관관계가 확인되었으며, 온도가 상승할수록 불량률이 증가하는 경향을 보였습니다.\n",
-      "4. 비즈니스 제언: 세정 장비의 온도를 정기적으로 모니터링하고, 필요시 냉각 시스템을 가동하여 온도 조절을 해야 합니다. 또한, 불량 감지율이 일정 수준 이상으로 상승할 경우 자동으로 라인 정지를 유발하는 안전장치를 설치해야 합니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 반도체 제조 라인의 수율은 95%를 유지하고 있습니다.\n",
+      "   - 특정 세정 장비의 온도가 2도 상승했습니다.\n",
+      "   - 불량 감지율이 0.5% 증가했습니다.\n",
       "\n",
-      "---\n",
+      "2. 가설 설정:\n",
+      "   - 세정 장비의 온도 상승이 반도체 제조 과정에서 발생하는 불량률 증가와 관련이 있을 것이다.\n",
       "\n",
-      "[입력 데이터]\n",
-      "은행 대출 이자율: 3% 인상, 신규 대출 건수 10% 감소, 기존 고객 이자 수익 20% 증가\n",
+      "3. 분석 결과:\n",
+      "   - 세정 장비 온도가 상승한 시기와 불량 감지율이 증가한 시기가 일치하는 경향을 보임.\n",
+      "   - 온도 상승 전후로 불량률의 변화 패턴을 분석한 결과, 온도 상승 후 불량률이 0.5% 증가한 것으로 확인됨.\n",
       "\n",
-      "[분석 결과 보고서]\n",
-      "\n",
-      "1. 데이터 요약: 은행의 대출 이자율이 인상되면서 신규 대출이 줄어들고 기존 고객의 이자 수익이 늘어났습니다.\n",
-      "2. 가설 설정: 높은 이자율로 인해 신규 고객 유치가 어려워지고 대신 기존 고객들이 더 많은 대출을 취득했을 것입니다.\n",
-      "3. 분석 결과: 실제로 신규 대출 고객 수는 감소했지만, 기존 고객의 평균 대출 금액은 15% 증가했습니다. 또한, 이자율이 인상된 후 기존 고객의 대출 갱신율도 높아졌습니다.\n",
-      "4. 비즈니스 제언: 이자율을 인상하는 대신 다양한 유인책을 제공하여 신규 고객을 유치해야 합니다. 예를 들어, 첫 번째 대출 시 이자율을 낮추거나, 대출 금액에 따라 이자율을 단계적으로 인하하는 등 유연한 금리 정책을 시행할 필요가 있습니다. 또한, 기존 고객의 대출 갱신율 관리를 통해 이자 수익을 안정화해야 합니다.\n",
-      "\n",
-      "---\n",
+      "4. 비즈니스 제언:\n",
+      "   - 세정 장비의 온도를 지속적으로 모니터링하고, 일정한 범위 내에서 유지할 수 있는 조치를 취해야 함.\n",
+      "   - 온도 관리 시스템을 개선하여 불량률 증가를 예방하는 방안을 마련해야 함.\n",
+      "   - 온도 상승 시 자동으로 알림을 보내는 시스템을 도입하여 신속하게 대응할 수 있도록 해야 함.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 신규 앱 서비스: 주간 활성 사용자(WAU) 15% 상승, 결제 전환율 2% 정체, 결제 페이지 이탈률 70%.\n",
       "------------------------------\n",
-      "1. 데이터 요약:1. 데이터 요약: 신규 앱 서비스의 주간 활성 사용자가 증가하였지만 결제 전환율은 변동이 없음.\n",
-      "2. 가설 설정: 결제 페이지의 복잡한 구조로 인해 사용자들이 이탈하고 있을 것이다.\n",
-      "3. 분석 결과: 결제 페이지에서 평균 5분 이상 머무르며, 이 기간 동안 대부분이 다른 활동을 함.\n",
-      "4. 비즈니스 제언: 결제 페이지의 간소화와 유도 디자인을 통해 사용자들의 집중력을 높이고 이탈률을 줄여야 함.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 주간 활성 사용자(WAU)가 15% 증가하여 사용자 유입이 긍정적으로 나타났음.\n",
+      "   - 그러나 결제 전환율은 2%로 정체되어 있으며, 결제 페이지 이탈률은 70%에 달함.\n",
+      "\n",
+      "2. 가설 설정:\n",
+      "   - 결제 페이지의 복잡한 절차나 불편한 사용자 경험이 사용자들이 결제를 완료하지 못하게 하는 주요 원인일 것이다.\n",
+      "   - 또한, 결제 과정에서 발생하는 기술적 문제나 보안 우려가 이탈률을 높이는 요인으로 작용할 수 있음.\n",
+      "\n",
+      "3. 분석 결과:\n",
+      "   - 사용자 피드백 분석 결과, 결제 페이지의 복잡한 절차와 불편한 사용자 경험이 주요 원인으로 확인됨.\n",
+      "   - 또한, 결제 과정에서 발생하는 기술적 문제나 보안 우려가 이탈률을 높이는 요인으로 작용함.\n",
+      "\n",
+      "4. 비즈니스 제언:\n",
+      "   - 결제 페이지의 사용자 경험(UX)을 개선하여 더 직관적이고 간편한 결제 절차를 제공해야 함.\n",
+      "   - 결제 과정에서 발생하는 기술적 문제나 보안 우려를 해결하기 위해 추가적인 테스트와 모니터링을 강화해야 함.\n",
       "\n",
       "\n",
       "\n",
       "\n",
       "target_input: 배달 서비스: 주말 주문량 +15%, 라이더 배차 시간 +10분, 고객 불만 건수 2배 증가.\n",
       "------------------------------\n",
-      "1. 데이터 요약:주말 주문량이 증가하면서 배달 시간이 길어지고 고객 불만이 늘어났습니다.\n",
-      "2. 가설 설정: 주문량 증가가 라이더 수를 따라가지 못하여 배차 지연이 발생하고, 이로 인해 고객 불만 건수가 증가했을 것입니다.\n",
-      "3. 분석 결과: 주문량 증가는 예상되었지만, 라이더 수와 배차 시간 간의 상관관계가 높게 나타났습니다. 또한, 배차 지연 시간이 길어질수록 고객 불만 건수도 함께 증가했습니다.\n",
-      "4. 비즈니스 제언: 주말에 더 많은 라이더를 배치하고, 배차 시스템을 개선하여 실시간으로 라이더 수와 주문량을 조절할 수 있도록 해야 합니다. 또한, 고객에게 예상 배달 시간을 명확하게 제공하고, 지연이 발생할 경우 사전에 통보하는 시스템을 구축해야 합니다.\n",
+      "1. 데이터 요약:1. 데이터 요약:\n",
+      "   - 주말 주문량이 15% 증가하였습니다.\n",
+      "   - 라이더의 배차 시간이 10분 연장되었습니다.\n",
+      "   - 고객 불만 건수가 2배로 증가하였습니다.\n",
       "\n",
-      "---\n",
+      "2. 가설 설정:\n",
+      "   - 주말 주문량 증가로 인해 라이더의 수요가 급증하여 배차 시간과 고객 불만이 증가했을 것이다.\n",
+      "\n",
+      "3. 분석 결과:\n",
+      "   - 주말 주문량이 증가한 시기와 배차 시간이 연장된 시기가 일치하는 것으로 확인되었습니다.\n",
+      "   - 고객 불만 건수가 증가한 시기와 배차 시간이 연장된 시기도 일치하는 것으로 확인되었습니다.\n",
+      "\n",
+      "4. 비즈니스 제언:\n",
+      "   - 주말에 대비하여 추가 라이더를 배치하거나, 주말 주문량을 분산시키기 위한 프로모션을 도입해야 합니다.\n",
+      "   - 고객 불만 건수를 줄이기 위해 배차 시간 단축을 위한 로직 개선 및 효율적인 배차 시스템 도입이 필요합니다.\n",
       "\n",
       "\n",
       "\n"
